--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ code {
     width: 85%;
     height: 80%;
     border: 3px solid var(--bold);
-    margin: 0 auto;
+    margin: 0 0.5rem;
   }
 
   #navbar li {
@@ -136,7 +136,7 @@ code {
     z-index: 1;
     background-color: #fff;
     margin: 0;
-    margin: 20rem 0.5rem 0 0;
+    margin: 20rem 0.5rem 0 0.2rem;
     padding: 0;
     padding-left: 1rem;
   }
