--- a/css/styles.css
+++ b/css/styles.css
@@ -122,14 +122,13 @@ code {
     width: 85%;
     height: 80%;
     border: 3px solid var(--bold);
-    margin: 0 0.5rem;
+    margin: 0 0.1rem;
   }
 
   #navbar li {
     padding: 0;
     margin: 0;
-    padding-left: 0.3rem;
-    padding: 0.5rem 0 0.5remrem 0.3rem;
+    padding: 0.5rem 0 0.2rem 0.3rem;
   }
 
   #main-doc {
